--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">    
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="contact-us">
@@ -11,7 +11,7 @@
                 <h2>Kenji  Nagata | 長田健慈</h2>
                 <p>開志専門職大学在学中
                 開志専門職大学生として日々尽力中
-                <img src="img/MicrosoftTeams-image (8).png" width="250" height="350" >
+                <img src="MicrosoftTeams-image (8).png" width="250" height="350" >
                 </p>
                 <p>開志専門職大学             学部2年の長田です。
                     現在は開志専門職大学生として、日々の講義や課題などをこなしております。
