--- a/work.html
+++ b/work.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>        <link rel="stylesheet" href="css/style.css">   </head>
+<head>        <link rel="stylesheet" href="style.css">   </head>
 <body>
     <div class="contact-us">
         <div class="form">
@@ -12,10 +12,10 @@
                 </p>
             </div>
             <div class="text">
-                <img src="img/MicrosoftTeams-image (7).png" width="200" height="200">
-                <img src="img/MicrosoftTeams-image (11).png" width="200" height="200">
-                <img src="img/MicrosoftTeams-image (10).png" width="200" height="200">
-                <img src="img/MicrosoftTeams-image (9).png" width="200" height="200">
+                <img src="MicrosoftTeams-image (7).png" width="200" height="200">
+                <img src="MicrosoftTeams-image (11).png" width="200" height="200">
+                <img src="MicrosoftTeams-image (10).png" width="200" height="200">
+                <img src="MicrosoftTeams-image (9).png" width="200" height="200">
             </div>
             <div class="social-icon">
                 <div class="home">
